--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "compilerOptions": {
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "jsx": "react",
-    "target": "es6",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "strict": true
+    "target": "es6", // Choose es6 or esnext based on your needs
+    "lib": ["dom", "dom.iterable", "esnext"], // Include necessary libraries
+    "allowJs": true, // Allows JavaScript files
+    "skipLibCheck": true, // Skip type checking of declaration files
+    "strict": true, // Enable strict type checking
+    "forceConsistentCasingInFileNames": true, // Consistent file name casing
+    "noEmit": true, // Do not emit output
+    "esModuleInterop": true, // Enables emit interoperability between CommonJS and ES Modules
+    "module": "esnext", // Use ES modules
+    "moduleResolution": "node", // Resolve modules using Node.js resolution
+    "resolveJsonModule": true, // Allows importing JSON files
+    "isolatedModules": true, // Ensures each file can be safely transpiled independently
+    "jsx": "react-jsx" // Use the new JSX transform for React
   },
-  "exclude": ["node_modules"]
+  "include": ["src"], // Include source files in the 'src' directory
+  "exclude": ["node_modules"] // Exclude the 'node_modules' directory
 }
